--- a/hugo.yaml
+++ b/hugo.yaml
@@ -61,7 +61,7 @@ params:
     - name: twitter
       url: "https://twitter.com/padiazg"
     - name: github
-      url: "https://github.com/padiazg"
+      url: "https://github.com/pato-diaz"
     - name: linkedin
       url: "https://www.linkedin.com/in/patricio-diaz-g/"
 
