--- a/hugo.yaml
+++ b/hugo.yaml
@@ -22,6 +22,8 @@ menu:
       url: posts/
     - name: Search
       url: search/
+    - name: Resume
+      url: resume/
 
 params:
   env: production
